[package]
name = "json-ez"
description = "This crate is a wrapper around serde and serde_json crates. It does not aim to replace those two awesome crates, the goal is to provide another more user friendly way to deal with JSON objects in Rust."
version = "0.2.0"
authors = ["Alexandre Bouthinon <bouthinon.alexandre@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/alexandrebouthinon/json-ez"
repository = "https://github.com/alexandrebouthinon/json-ez.git"
documentation = "https://docs.rs/json-ez/0.1.0/json_ez"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
